--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "EXE2",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "build": "node_modules/webpack/bin/webpack.js"
-  },
-  "author": "Luiz Mendes",
-  "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-preset-es2017": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.29.0",
-    "sass": "^1.22.3",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.18.2",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
-  }
+    "name": "EXE2",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "node_modules/.bin/webpack-dev-server",
+        "build": "node_modules/.bin/webpack"
+    },
+    "author": "Luiz Mendes/Carlos",
+    "license": "ISC",
+    "dependencies": {},
+    "devDependencies": {
+        "babel-core": "^6.25.0",
+        "babel-loader": "^7.1.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1",
+        "css-loader": "^0.28.4",
+        "extract-text-webpack-plugin": "^2.1.2",
+        "file-loader": "^0.11.2",
+        "html-webpack-plugin": "^2.29.0",
+        "sass": "^1.22.3",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.18.2",
+        "uglifyjs-webpack-plugin": "^0.4.6",
+        "webpack": "^3.0.0",
+        "webpack-dev-server": "^2.5.0"
+    }
 }
